@@ -1,4 +1,5 @@
 0.07
+ - Update Module::Install to 1.21 version.
 
 0.06 2017-11-23T08:48:51+01:00
  - Add EXAMPLE5 section to doc.
